[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/zoom_ui.gd" id="1_zoom"]

[node name="ZoomUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_zoom")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 120.0
grow_horizontal = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ZoomLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "x3.0"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ZoomInButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "+"

[node name="ZoomOutButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "-"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ZoomInButton" to="." method="_on_zoom_in_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ZoomOutButton" to="." method="_on_zoom_out_pressed"]
